Release 3.1.3: NU Vitesse TOF support, clustering, spectrum view, scatter plot improvements, compressed serialization, GUI updates
feat(reader/nu): add NU Vitesse TOF binary raw data reader [experimental!]
feat(reader/nu): add RAM cache to keep data alive as long as possible
feat(reader/nu): accept data from free running sample acquisition
feat(reader/nu): add drag/drop import support
feat(reader/nu): add default isotope configuration options and save them to configuration and defaults
feat(reader/nu): add threshold mode to control which isotopes are loaded
feat(isotopes): add option to fix/select favorite isotopes stored per sample
feat(isotopes): add delete isotope feature
feat(isotopes): add rudimentary math operations on time-intensity series (summation, isotope ratio)
feat(aligner): add event aligner to find events in multi-mz data as regions [experimental]
feat(spectrum): add spectrum view
feat(spectrum): add spectra to populations (store them in the population to avoid reloading)
feat(clustering): add hierarchical clustering (HAC) with dendrogram viewer, distance threshold optimiser and pie charts [experimental]
feat(clustering): add cosine similarity to HAC [experimental]
feat(scatter): add polygon selection and population management for polygons [experimental]
feat(scatter): add regression trend indicator in scatter view
feat(scatter): add isotope 1 vs isotope 2 scattering mode
feat(roi): add manual ROIs (quick action item)
fix(roi): add ROI with custom label for unique ID enforcement
feat(results): add dwell time (ms) and raw mean (cps) to results table
feat(estimator): add single ion area estimator [alpha/experimental, checked against SPCal2 though]
feat(import): add large particle counter import (secondary feature)
feat(filter): add gate filter based on p-value for noisy data
feat(filter): add/improve background fraction removal from histogram (creates population, similar to ROI)
feat(serializer): change project serializer format to ZStd; backwards compa